--- a/scss/index.scss
+++ b/scss/index.scss
@@ -23,6 +23,7 @@ body {
 
 .firstpage {
 	position: relative;
+	height: 100svh;
 	.bg {
 		width: 100%;
 		height: 100%;
@@ -67,8 +68,8 @@ body {
 		}
 		button {
 			display: block;
+			padding: 12px 60px;
 			width: 100%;
-			padding: 12px 16px;
 			font-size: 16px;
 			background: #fff;
 			color: #000;
@@ -76,5 +77,85 @@ body {
 			border-radius: 2px;
 			font-weight: bold;
 		}
+	}
+}
+
+.model-y {
+	position: relative;
+	height: 100vh;
+	img {
+		width: 100%;
+		height: 100%;
+	}
+	.top {
+		position: absolute;
+		top: 100px;
+		left: 50%;
+		transform: translateX(-50%);
+		text-align: center;
+		color: #000;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 8px;
+		flex-direction: column;
+		h1 {
+			font-size: 28px;
+		}
+		strong {
+			display: block;
+			font-size: 20px;
+		}
+	}
+	.bottom {
+		position: absolute;
+		bottom: 50px;
+		left: 50%;
+		transform: translateX(-50%); 
+		text-align: center;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 12px;
+		flex-direction: column;
+		.btns {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			flex-direction: column;
+			gap: 12px;
+			.shop-btn {
+				display: block;
+				background: rgba(255, 255, 255, 0.5);
+				backdrop-filter: blur(10px);
+				-webkit-backdrop-filter: blur(10px);
+				color: var(--teslaColor);
+				width: 100%;
+				padding: 14px 88px;
+				font-size: 16px;
+				font-weight: 600;
+				border-radius: 2px;
+			}
+			.demo-btn {
+				display: block;
+				background: var(--teslaColor);
+				color: #fff;
+				width: 100%;
+				padding: 14px 88px;
+				font-size: 16px;
+				font-weight: 600;
+				border-radius: 2px;
+			}
+		}
+		p {
+			font-size: 12px;
+			padding: 4px 12px;
+		}
+	}
+}
+
+@media screen and (min-width: 767px) {
+	.model-y {
+		height: auto;
 	}
 }
