--- a/css/index.css
+++ b/css/index.css
@@ -110,14 +110,15 @@ body img {
 .model-y .bottom {
   position: absolute;
   bottom: 50px;
-  left: 50%;
-  transform: translateX(-50%);
+  /*	left: 50%;
+  transform: translateX(-50%); */
   text-align: center;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 12px;
   flex-direction: column;
+  width: 100%;
 }
 .model-y .bottom .btns {
   display: flex;
@@ -133,7 +134,7 @@ body img {
   -webkit-backdrop-filter: blur(10px);
   color: var(--teslaColor);
   width: 100%;
-  padding: 14px 88px;
+  padding: 14px 90px;
   font-size: 16px;
   font-weight: 600;
   border-radius: 2px;
@@ -143,7 +144,7 @@ body img {
   background: var(--teslaColor);
   color: #fff;
   width: 100%;
-  padding: 14px 88px;
+  padding: 14px 90px;
   font-size: 16px;
   font-weight: 600;
   border-radius: 2px;
@@ -156,6 +157,13 @@ body img {
 @media screen and (min-width: 767px) {
   .model-y {
     height: auto;
+  }
+  .model-y .bottom .btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 20px;
   }
 }
 
