--- a/scss/index.scss
+++ b/scss/index.scss
@@ -110,14 +110,15 @@ body {
 	.bottom {
 		position: absolute;
 		bottom: 50px;
-		left: 50%;
-		transform: translateX(-50%); 
+		/*	left: 50%;
+		transform: translateX(-50%); */
 		text-align: center;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		gap: 12px;
 		flex-direction: column;
+		width: 100%;
 		.btns {
 			display: flex;
 			justify-content: space-between;
@@ -131,7 +132,7 @@ body {
 				-webkit-backdrop-filter: blur(10px);
 				color: var(--teslaColor);
 				width: 100%;
-				padding: 14px 88px;
+				padding: 14px 90px;
 				font-size: 16px;
 				font-weight: 600;
 				border-radius: 2px;
@@ -141,7 +142,7 @@ body {
 				background: var(--teslaColor);
 				color: #fff;
 				width: 100%;
-				padding: 14px 88px;
+				padding: 14px 90px;
 				font-size: 16px;
 				font-weight: 600;
 				border-radius: 2px;
@@ -157,5 +158,15 @@ body {
 @media screen and (min-width: 767px) {
 	.model-y {
 		height: auto;
+		.bottom {
+		  
+		.btns {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: row;
+			gap: 20px;
+		}
+		}
 	}
 }
